<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/admin_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#55697a"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/admin_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/admin_text"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:id="@+id/admin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/admin_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/admin_id"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

                    <Button
                        android:id="@+id/admin_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/admin_btn"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <EditText
                    android:id="@+id/admin_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/admin_text_input"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|text"
                    android:lines="6"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/btn1"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:text="@string/btn1"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn2"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:text="@string/btn2"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn3"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn4"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn4"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn5"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn5"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn6"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn6"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn7"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn7"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn8"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn8"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/example_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/example_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/example_1"
                    app:srcCompat="@drawable/example_1" />

                <ImageView
                    android:id="@+id/example_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/example_2"
                    app:srcCompat="@drawable/example_2" />

                <TextView
                    android:id="@+id/example_1_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/example_1_id"
                    android:textColor="#797979"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/example1_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/roboto"
                    android:textColor="#797979"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/example_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/example_3"
                    app:srcCompat="@drawable/example_3" />

                <ImageView
                    android:id="@+id/example_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/example_4"
                    app:srcCompat="@drawable/example_4" />


                <TextView
                    android:id="@+id/example_2_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/example_2_id"
                    android:textColor="#797979"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/example2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/roboto"
                    android:textColor="#797979"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/example_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/example_5"
                    app:srcCompat="@drawable/example_5" />

                <TextView
                    android:id="@+id/example_3_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/example_3_id"
                    android:textColor="#797979"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/example3_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/roboto"
                    android:textColor="#797979"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn9"
                style="@style/Button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn9"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/roboto"
                android:textColor="#797979"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>